--- a/Depo/Depo/Presentation/CollectionViewCells/AudioSelectionCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/AudioSelectionCollectionViewCell.xib
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AudioSelectionCollectionViewCell" id="gTV-IL-0wX" customClass="AudioSelectionCollectionViewCell" customModule="Depo_LifeTech" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AudioSelectionCollectionViewCell" id="gTV-IL-0wX" customClass="AudioSelectionCollectionViewCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="306" height="46"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -26,7 +24,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cvm-Tn-YeC">
-                        <rect key="frame" x="55" y="12" width="195" height="21"/>
+                        <rect key="frame" x="55" y="12.5" width="195" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="plY-5j-AhO"/>
                         </constraints>
@@ -39,8 +37,8 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="47" id="PDV-bq-kRF"/>
                         </constraints>
-                        <state key="normal" image="creationStoryPlay"/>
-                        <state key="selected" image="creationStoryPause"/>
+                        <state key="normal" image="iconPlayRed"/>
+                        <state key="selected" image="iconPauseRed"/>
                         <connections>
                             <action selector="onPlayButton" destination="gTV-IL-0wX" eventType="touchUpInside" id="iii-ox-doU"/>
                         </connections>
@@ -77,7 +75,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="creationStoryPause" width="11" height="12"/>
-        <image name="creationStoryPlay" width="11" height="16"/>
+        <image name="iconPauseRed" width="24" height="24"/>
+        <image name="iconPlayRed" width="24" height="24"/>
     </resources>
 </document>
