--- a/Depo/Depo/Presentation/UserStories/CreateStory/CreationStorySelectionItems/SelectAudio/AudioSelectionCell/CreateStoryAudioItemCell.xib
+++ b/Depo/Depo/Presentation/UserStories/CreateStory/CreationStorySelectionItems/SelectAudio/AudioSelectionCell/CreateStoryAudioItemCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,7 +24,7 @@
                             <constraint firstAttribute="height" constant="28" id="aCg-tF-64S"/>
                             <constraint firstAttribute="width" constant="28" id="dZ0-ZW-Ecr"/>
                         </constraints>
-                        <state key="normal" image="creationStroryItemPlay"/>
+                        <state key="normal" image="iconPlayRed"/>
                         <connections>
                             <action selector="playButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="x1L-9i-VQN"/>
                         </connections>
@@ -38,12 +38,12 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kzy-5N-7Kx">
-                        <rect key="frame" x="237" y="7" width="70" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kzy-5N-7Kx">
+                        <rect key="frame" x="237" y="8" width="70" height="28"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="2nz-hK-Ihx"/>
                         </constraints>
-                        <state key="normal" title="Selected"/>
+                        <state key="normal" image="iconAddSelect"/>
                         <connections>
                             <action selector="selectButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="MYr-DX-Udt"/>
                         </connections>
@@ -71,7 +71,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="creationStroryItemPlay" width="28" height="28"/>
+        <image name="iconAddSelect" width="28" height="28"/>
+        <image name="iconPlayRed" width="24" height="24"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
