LB-1759 CreateStorySelection is designed

--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/ContactBackupCell/ContactsBackupCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/ContactBackupCell/ContactsBackupCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -32,7 +32,7 @@
                             <constraint firstAttribute="height" constant="12" id="hMI-T9-WUB"/>
                             <constraint firstAttribute="width" constant="12" id="nWK-ji-ok3"/>
                         </constraints>
-                        <state key="normal" image="notSelected"/>
+                        <state key="normal" image="iconSelectEmpty"/>
                         <connections>
                             <action selector="selectButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="wiK-TI-eCy"/>
                         </connections>
@@ -85,7 +85,7 @@
     </objects>
     <resources>
         <image name="contacts_buckup_cell" width="31" height="40"/>
-        <image name="notSelected" width="24" height="24"/>
+        <image name="iconSelectEmpty" width="24" height="24"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
