--- a/Depo/Depo/Presentation/UserStories/Spotify/SpotifyPlaylistCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Spotify/SpotifyPlaylistCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,7 +24,7 @@
                             <constraint firstAttribute="height" constant="44" id="0dS-vL-IxQ"/>
                             <constraint firstAttribute="width" constant="44" id="r8C-8y-NMP"/>
                         </constraints>
-                        <state key="normal" image="notSelected"/>
+                        <state key="normal" image="iconSelectEmpty"/>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="djo-fS-4bR">
                         <rect key="frame" x="50" y="0.0" width="111" height="70"/>
@@ -106,9 +106,9 @@
     </objects>
     <resources>
         <image name="arrow_create_story" width="24" height="24"/>
-        <image name="notSelected" width="24" height="24"/>
+        <image name="iconSelectEmpty" width="24" height="24"/>
         <namedColor name="itemSeperator">
-            <color red="0.91700000000000004" green="0.91700000000000004" blue="0.91700000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
