--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/PeopleCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/PeopleCollectionViewCell.xib
@@ -37,6 +37,9 @@
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHD-Iq-rwd">
                         <rect key="frame" x="0.0" y="76" width="74" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="28" id="MbT-n2-N2E"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
