--- a/Depo/Depo/Presentation/UserStories/CreateStory/CreateStoryViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/CreateStory/CreateStoryViewController.xib
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -24,27 +25,62 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="SFF-o9-tmC">
-                    <rect key="frame" x="16" y="10" width="343" height="136"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="SFF-o9-tmC">
+                    <rect key="frame" x="0.0" y="10" width="375" height="163"/>
                     <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kEh-R6-fr4" userLabel="Separator">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
+                            <color key="backgroundColor" name="separator"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="5er-MI-Wif"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a62-gu-OoY" userLabel="Spacing">
+                            <rect key="frame" x="0.0" y="1" width="375" height="20"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="qZk-ZQ-t8c"/>
+                            </constraints>
+                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IeB-rG-1di" customClass="ProfileTextEnterView" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
+                            <rect key="frame" x="0.0" y="21" width="375" height="60"/>
                             <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="60" id="C87-xC-yFL"/>
                             </constraints>
                         </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zwY-BD-mrT" userLabel="Separator">
+                            <rect key="frame" x="0.0" y="81" width="375" height="1"/>
+                            <color key="backgroundColor" name="separator"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="yR3-Mu-ITa"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K6h-72-g8O" userLabel="Spacing">
+                            <rect key="frame" x="0.0" y="82" width="375" height="20"/>
+                            <color key="backgroundColor" name="background"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="4c4-9Z-9Id"/>
+                            </constraints>
+                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KeF-x1-ey1" customClass="CreateStoryMusicEnterView" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="76" width="343" height="60"/>
+                            <rect key="frame" x="0.0" y="102" width="375" height="60"/>
                             <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="60" id="kfr-4b-8RU"/>
                             </constraints>
                         </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wgk-11-w4V" userLabel="Separator">
+                            <rect key="frame" x="0.0" y="162" width="375" height="1"/>
+                            <color key="backgroundColor" name="separator"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="YZe-3p-5jR"/>
+                            </constraints>
+                        </view>
                     </subviews>
                 </stackView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E5I-Px-86y">
-                    <rect key="frame" x="15" y="166" width="345" height="14.5"/>
+                    <rect key="frame" x="15" y="185" width="345" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -60,7 +96,7 @@
                     </connections>
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="7aQ-Nm-zL9">
-                    <rect key="frame" x="0.0" y="200.5" width="375" height="401.5"/>
+                    <rect key="frame" x="0.0" y="211.5" width="375" height="390.5"/>
                     <color key="backgroundColor" name="primaryBackground"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Gg7-tH-F2s">
                         <size key="itemSize" width="50" height="50"/>
@@ -75,15 +111,15 @@
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="qY6-PL-KB4" secondAttribute="bottom" constant="12" id="4FN-DG-rRY"/>
                 <constraint firstItem="qY6-PL-KB4" firstAttribute="top" secondItem="7aQ-Nm-zL9" secondAttribute="bottom" constant="8" id="A8s-72-SMb"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SFF-o9-tmC" secondAttribute="trailing" constant="16" id="AIl-OZ-wFg"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SFF-o9-tmC" secondAttribute="trailing" id="AIl-OZ-wFg"/>
                 <constraint firstItem="SFF-o9-tmC" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="Dcg-ZD-7uh"/>
-                <constraint firstItem="E5I-Px-86y" firstAttribute="top" secondItem="SFF-o9-tmC" secondAttribute="bottom" constant="20" id="E6q-Gg-mzG"/>
-                <constraint firstItem="7aQ-Nm-zL9" firstAttribute="top" secondItem="E5I-Px-86y" secondAttribute="bottom" constant="20" id="Wsn-Uh-DXE"/>
+                <constraint firstItem="E5I-Px-86y" firstAttribute="top" secondItem="SFF-o9-tmC" secondAttribute="bottom" constant="12" id="E6q-Gg-mzG"/>
+                <constraint firstItem="7aQ-Nm-zL9" firstAttribute="top" secondItem="E5I-Px-86y" secondAttribute="bottom" constant="12" id="Wsn-Uh-DXE"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7aQ-Nm-zL9" secondAttribute="trailing" id="XR9-0k-Rrj"/>
                 <constraint firstItem="E5I-Px-86y" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="bHt-kG-kW6"/>
                 <constraint firstItem="E5I-Px-86y" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="15" id="d1W-c7-Atr"/>
                 <constraint firstItem="qY6-PL-KB4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="28" id="riW-sl-9ff"/>
-                <constraint firstItem="SFF-o9-tmC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ssz-NP-dXi"/>
+                <constraint firstItem="SFF-o9-tmC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ssz-NP-dXi"/>
                 <constraint firstItem="7aQ-Nm-zL9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="weC-vM-PxS"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="qY6-PL-KB4" secondAttribute="trailing" constant="28" id="xbb-RP-WwC"/>
             </constraints>
@@ -91,8 +127,17 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="separator">
+            <color red="0.92199999094009399" green="0.92500001192092896" blue="0.92500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
